deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-list
  namespace: NAMESPACE
  labels:
    app: image-list
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-list
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: image-list
    spec:
      containers:
        - name: image-list
          image: artifactrepo/image-list:1.0.0
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: image-list-sa
      serviceAccount: image-list-sa
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 1200
---
apiVersion: v1
kind: Service
metadata:
  name: image-list
  namespace: NAMESPACE
  labels:
    app.kubernetes.io/instance: image-list
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: image-list
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-list
  namespace: NAMESPACE
spec:
  rules:
    - host: domain.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: image-list
                port:
                  number: 8080
